# learning

./: .gitignore  a.out  q
C/: main  main.c
C++/: main  main.cpp
C++/AutoBattler/: main  main.cpp
C++/RougeLike/: main  main.cpp
C++/Test/: CMakeLists.txt
C++/Test/scr/: main.cpp
C++/Test/src/: main.cpp
C/to_do_lister/: main.c  main.file
Learning/Solid_Snake/Windows/: main.c
Learning/Sudoku/: main.c
Learning/algorithm and data type/stack/: main.c
Learning/tic_tac_toe/: main.c  main1.c
Solid_Snake/Windows/: main.c  window_create.c
SpaceRogue/: main  main.c
SpaceRogue/Linux/: main  main_curse.c  main_curses.c
SpaceRogue/Windows/: main.c
Sudoku/: main.c
To-Do Planner/: main.c  mainfile.txt
algorithm and data type/Add and Remove text/: main.c  main_print.c  main_write.c  mainfile.txt  test.txt
algorithm and data type/Buble Sort/: main.c
algorithm and data type/Linear Search/: main.c
algorithm and data type/Quick Sort/: main.c
algorithm and data type/Quick Sort + Binary Search/: main.c
algorithm and data type/stack/: main.c
leetcode/Roman to int/: main.c
leetcode/TwoSums/: main.c
tic_tac_toe/: main.c
